--- a/readme
+++ b/readme
@@ -1,45 +1,1 @@
-Portfolio Project with React, Next.js, Bootstrap, and Vite
-Welcome to my portfolio project repository! This project showcases my skills and projects using cutting-edge technologies like React, Next.js, Bootstrap, and Vite. Whether you are a recruiter, potential collaborator, or just curious about my work, you've come to the right place.
-
-Technologies Used
-React: A popular JavaScript library for building user interfaces.
-Next.js: A React framework for server-side rendering, static site generation, and more.
-Bootstrap: A sleek, intuitive, and powerful front-end framework for faster and easier web development.
-Vite: A fast, opinionated build tool for modern web development.
-Features
-Responsive Design: The portfolio is designed to be responsive, ensuring a seamless experience across various devices and screen sizes.
-Project Showcase: Highlighting my latest and most significant projects, providing a brief overview and links for further exploration.
-Skills: A section dedicated to listing the technologies, programming languages, and tools I specialize in.
-Contact Information: Easy access to my social media profiles, email, or any other means of communication.
-How to Run Locally
-To run this project locally, follow these steps:
-
-Clone the Repository:
-
-sh
-Copy code
-git clone <repository-url>
-Navigate to the Project Directory:
-
-sh
-Copy code
-cd portfolio-project
-Install Dependencies:
-
-sh
-Copy code
-npm install
-Run the Development Server:
-
-sh
-Copy code
-npm run dev
-This will start the development server. Open http://localhost:3000 in your browser to view the portfolio.
-
-Contributing
-If you find any issues or have suggestions for improvement, feel free to open an issue or create a pull request. Contributions are welcome!
-
-License
-This project is licensed under the MIT License - see the LICENSE.md file for details.
-
-Thank you for visiting my portfolio project! If you have any questions or just want to connect, feel free to reach out. Happy coding! 😊
+This Project is Still underDevelopment (Only the landing page is working)...
